--- a/package.json
+++ b/package.json
@@ -9,18 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.99.0",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.5.0",
+    "lucide-react": "^0.525.0",
+    "next": "14.2.2",
+    "next-sanity": "^9.12.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.2"
+    "react-intersection-observer": "^9.16.0",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
+    "sanity": "^3.99.0",
+    "stripe": "^18.3.0",
+    "styled-components": "^6.1.19",
+    "sweetalert2": "^11.22.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@sanity/types": "^4.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-redux": "^7.1.34",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.2"
+    "typescript": "^5"
   }
 }
