--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-sanity": "^9.12.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
