--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.2.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.99.0",
